tests/parsing/smtlib/poly/errors/130_datatype_dec_unclosed_1.psmt2
(set-logic ALL)
(declare-datatype foo (par (a) ((A)) _))
