tests/parsing/smtlib/poly/errors/130_datatype_dec_unclosed_1.expected
File "tests/parsing/smtlib/poly/errors/130_datatype_dec_unclosed_1.psmt2", line 2, character 37-38:
Error while parsing a datatype declaration, read the reserved word '_',
      but expected a closing parenthesis.
